--- a/Webhooks.Consumer.Api/Webhooks.Consumer.Api.csproj
+++ b/Webhooks.Consumer.Api/Webhooks.Consumer.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebHooksPractice.SharedKernel\WebHooks.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
