--- a/WebHookPractice.Processor.Worker/WebHooks.Provider.Worker.csproj
+++ b/WebHookPractice.Processor.Worker/WebHooks.Provider.Worker.csproj
@@ -9,5 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+	<PackageReference Include="Confluent.Kafka" Version="1.9.3" />
+	<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WebHooksPractice.SharedKernel\WebHooks.SharedKernel.csproj" />
   </ItemGroup>
 </Project>
