--- a/WebHooksPractice.SharedKernel/WebHooks.SharedKernel.csproj
+++ b/WebHooksPractice.SharedKernel/WebHooks.SharedKernel.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Confluent.Kafka" Version="1.9.3" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
