--- a/WebHookPractice.Processor.Worker/appsettings.json
+++ b/WebHookPractice.Processor.Worker/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServerConnection": "Data Source=.; database=Webhooks; integrated security = true"
   }
 }
