--- a/WebHooksPractice.SharedKernel/WebHooks.SharedKernel.csproj
+++ b/WebHooksPractice.SharedKernel/WebHooks.SharedKernel.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DapperHelper\DapperHelper.csproj" />
+    <ProjectReference Include="..\DapperHelper\Dapper.BaseRepository.csproj" />
   </ItemGroup>
 
 </Project>
