--- a/DapperHelper/Dapper.BaseRepository.csproj
+++ b/DapperHelper/Dapper.BaseRepository.csproj
@@ -5,11 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageId>ayiamco-$(AssemblyName)</PackageId>
-    <Title>DapperHelper</Title>
+    <PackageId>$(AssemblyName)</PackageId>
+    <Title>Dapper helper functions for repository pattern.</Title>
     <Authors>Joseph Achonu</Authors>
     <Description>A package containing wrapper classes for dapper with SqlServer, Oracle and Sybase support.</Description>
-    <PackageProjectUrl>https://github.com/Ayiamco/DapperHelper</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Ayiamco/Dapper.BaseRepository</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Ayiamco/DapperHelper</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>dapper,oracle,sybase,sqlserver</PackageTags>
