--- a/WebhooksProvider.API/Webhooks.App.Api.csproj
+++ b/WebhooksProvider.API/Webhooks.App.Api.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DapperBaseRepo\Dapper.BaseRepository.csproj" />
     <ProjectReference Include="..\WebHooksPractice.SharedKernel\WebHooks.SharedKernel.csproj" />
   </ItemGroup>
 
